# wp-motor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
_gal/: work.gxl
benches/: sink_package_bench.rs
crates/: README.md
crates/wp-cli-core/: Cargo.toml
crates/wp-cli-core/src/knowdb/: mod.rs
crates/wp-cli-core/src/rescue/: stat.rs
crates/wp-cli-core/src/utils/pretty/: helpers.rs  sinks.rs  sources.rs
crates/wp-condition/: Cargo.toml
crates/wp-condition/src/: lib.rs  sql_symbol.rs
crates/wp-condition/src/cond/: mod.rs  parser.rs  test.rs
crates/wp-config/: Cargo.toml
crates/wp-config/src/: engine.rs  limits.rs
crates/wp-config/src/cond/: parse.rs  test.rs
crates/wp-config/src/structure/sink/: instance.rs
crates/wp-core-connectors/: Cargo.toml
crates/wp-core-connectors/src/: builtin.rs  lib.rs  registry.rs  startup.rs
crates/wp-core-connectors/src/net/transport/: config.rs  mod.rs
crates/wp-core-connectors/src/net/transport/writer/: backoff.rs  logging.rs  mod.rs  nodelay.rs  os.rs  probe.rs
crates/wp-core-connectors/src/protocol/syslog/: encoder.rs  mod.rs
crates/wp-core-connectors/src/sinks/: arrow_file.rs  arrow_ipc.rs  blackhole.rs  blackhole_factory.rs  file.rs  file_factory.rs  mod.rs  syslog.rs  tcp.rs
crates/wp-lang/: Cargo.toml
crates/wp-lang/benches/: nginx_10k.rs  wpl_bench.rs  wpl_pipe_bench.rs
crates/wp-lang/src/ast/: code.rs
crates/wp-lang/src/ast/debug/: mod.rs
crates/wp-lang/src/ast/field/: types.rs
crates/wp-lang/src/ast/package/: mod.rs
crates/wp-lang/src/ast/syntax/: separator.rs  wpl_sep.rs
crates/wp-lang/src/eval/: err_test.rs  mod.rs  mod_test.rs
crates/wp-lang/src/eval/builtins/: pipe_fun.rs
crates/wp-lang/src/eval/runtime/: field.rs  field_pipe.rs  pipe_exec.rs  vm_unit.rs
crates/wp-lang/src/eval/runtime/group/: alt.rs  not.rs  opt.rs  order.rs  some_of.rs  traits.rs
crates/wp-lang/src/eval/value/: field_parse.rs  generate.rs  literal.rs  mechanism.rs  mod.rs  parse_def.rs  test_utils.rs
crates/wp-lang/src/eval/value/parser/: prelude.rs
crates/wp-lang/src/eval/value/parser/base/: bool.rs  chars.rs  digit.rs  hex.rs  ignore.rs  symbol.rs
crates/wp-lang/src/eval/value/parser/compute/: device.rs
crates/wp-lang/src/eval/value/parser/network/: http.rs  net.rs
crates/wp-lang/src/eval/value/parser/physical/time/: clf.rs  common.rs  rfc.rs  timestamp.rs
crates/wp-lang/src/eval/value/parser/protocol/: array.rs  json.rs  keyval.rs  kvarr.rs  mod.rs  proto_text.rs
crates/wp-lang/src/generator/: fmt.rs
crates/wp-lang/src/parser/: mod.rs  parse_code.rs  string.rs  utils.rs  wpl_anno.rs  wpl_field.rs  wpl_fun.rs  wpl_group.rs  wpl_pkg.rs  wpl_rule.rs
crates/wp-oml/: Cargo.toml
crates/wp-oml/benches/: oml_batch_processing.rs  oml_extract_bench.rs  oml_multistage.rs  oml_sql_bench.rs  oml_sql_bench_threadclone.rs  oml_static_block.rs
crates/wp-oml/benches/support/: mod.rs
crates/wp-oml/src/: lib.rs
crates/wp-oml/src/core/: diagnostics.rs  mod.rs  prelude.rs
crates/wp-oml/src/core/evaluator/: mod.rs  traits.rs
crates/wp-oml/src/core/evaluator/extract/basic/: batch.rs  mod.rs  read.rs  take.rs
crates/wp-oml/src/core/evaluator/extract/operations/: array.rs  calc.rs  lookup.rs  map.rs  matchs.rs  mod.rs  other.rs  record.rs
crates/wp-oml/src/core/evaluator/functions/: time.rs
crates/wp-oml/src/core/evaluator/query/: sql.rs
crates/wp-oml/src/core/evaluator/transform/: fmt.rs
crates/wp-oml/src/core/evaluator/transform/pipe/: array_obj.rs  base64.rs  escape.rs  extract_word.rs  net.rs  other.rs  path_url.rs  pipe_operation.rs  semantic_dict_loader.rs  time.rs
crates/wp-oml/src/core/model/: object.rs  types.rs
crates/wp-oml/src/language/: mod.rs  prelude.rs
crates/wp-oml/src/language/syntax/accessors/: mod.rs
crates/wp-oml/src/language/syntax/evaluators/: precise.rs
crates/wp-oml/src/language/syntax/functions/pipe/: other.rs  time.rs
crates/wp-oml/src/language/syntax/operations/: calc.rs  fmt.rs  lookup.rs  matchs.rs  mod.rs
crates/wp-oml/src/language/types/: model.rs
crates/wp-oml/src/parser/: code.rs  collect_prm.rs  cond.rs  fmt_prm.rs  fun_prm.rs  keyword.rs  lookup_prm.rs  map_prm.rs  match_prm.rs  mod.rs  oml_acq.rs  oml_aggregate.rs  oml_conf.rs  oml_err.rs  pipe_prm.rs  shm_prm.rs  sql_prm.rs  static_ctx.rs  syntax.rs  tdc_prm.rs
crates/wp-oml/tests/: knowledge_async_perf.rs  test_case.rs  zero_copy_validation.rs
crates/wp-primitives/: Cargo.toml
crates/wp-primitives/benches/: parser_bench.rs  quick_bench.rs
crates/wp-primitives/src/: atom.rs  comment.rs  lib.rs  symbol.rs  utils.rs
crates/wp-primitives/src/fun/: fun_trait.rs  mod.rs  parser.rs
crates/wp-primitives/src/net/: mod.rs
crates/wp-primitives/src/scope/: basic.rs  escaped.rs  mod.rs
crates/wp-proj/: Cargo.toml
crates/wp-proj/src/connectors/: defaults.rs
crates/wp-proj/src/example/conf/: wparse.toml
crates/wp-proj/src/models/: knowledge.rs  oml.rs
crates/wp-proj/src/project/: init.rs  tests.rs  warp.rs
crates/wp-proj/src/project/checker/: mod.rs
crates/wp-proj/src/sinks/: view.rs
crates/wp-proj/src/wpgen/: core.rs  manage.rs
crates/wp-stats/: Cargo.toml
crates/wp-stats/src/collector/: mod.rs
crates/wp-stats/src/model/: dimension.rs  measure.rs  record.rs  stat_dim.rs
crates/wp-stats/src/report/: stat_report.rs
docs/: README.md
docs/design/: runtime_hot_reload_design.md
src/connectors/: defs.rs  registry.rs  startup.rs
src/facade/: engine.rs  rescue.rs
src/knowledge/: mod.rs  stats_bridge.rs
src/orchestrator/config/: build_sinks.rs
src/orchestrator/engine/: recovery.rs  service.rs
src/protocol/syslog/: mod.rs
src/resources/: utils.rs
src/runtime/actor/: command.rs  exit_policy.rs  group.rs  mod.rs  routine.rs
src/runtime/errors/: mod.rs
src/runtime/parser/: act_parser.rs  (+1 more)
src/sinks/: builtin_factories.rs  mod.rs
src/sources/: config.rs  event_id.rs
src/stat/: metric_collect.rs  metric_set.rs  mod.rs  runtime_counters.rs
tests/: source_integration.rs  syslog_test.rs
(+80 files in other folders)
