[package]
name = "wp-cli-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wp_cli_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
orion-variate =  {workspace = true }
orion-error = {workspace = true }
wp-conf = { path = "../wp-config", package = "wp-config" }
orion_conf = { workspace = true, features = ["toml"]}
wp_knowledge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
