[package]
name = "wp-core-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wp_core_connectors"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
socket2 = { workspace = true }
toml = { workspace = true }
orion_conf = { workspace = true }
orion-variate = { workspace = true }
tokio = { workspace = true }
wp-conf = { path = "../wp-config", package = "wp-config" }
wp-connector-api = { workspace = true }
wp-model-core = { workspace = true }
wp-arrow = { workspace = true }
wp-data-fmt = { workspace = true }

[features]
dev-tools = []
