[package]
name = "wp-primitives"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "wp_primitives"
path = "src/lib.rs"

[dependencies]
winnow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "quick_bench"
harness = false
